--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -5,8 +5,6 @@
 {% load endless %}
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/styles-new.css" rel="stylesheet" type="text/css" />
-
     <meta property="og:title" content="{{event.name}}" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://{{ request.META.HTTP_HOST }}/events/view/{{event.slug}}/" />
@@ -18,96 +16,215 @@
     <meta property="og:site_name" content="Cityfusion" />
     <meta property="og:description" content="{{event.description}}" />
     <meta property="fb:admins" content="100000796428679" />
+
+
+    <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/styles-new.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/event/conversation.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{{STATIC_URL}}fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+    <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
+
+    <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}fancybox/jquery.fancybox.js"></script>
+    <script src="{{STATIC_URL}}js/event/eventpage.js" type="text/javascript"></script>
 {% endblock %}    
 
 
 {% block page %}
-    <h1>Event details</h1>
-    <div class="content">
-        <div class="event-wrapper">
-            <div class="event-photo">
-                {% if event.event.picture %}
-                    <img src="{% cropped_thumbnail event.event "cropping" width=215 %}" height="215px" weight="215px">
-                {% else %}
-                    <img src="{{STATIC_URL}}images/default-event.jpg" height="215px" weight="215px">
-                {% endif %}
-                <footer>
-                    Submitted by <span>{{ event.event.owner }}</span>
-                </footer>                
-            </div>
-            <div class="event-details">
-                <div class="title-wrapper">
-                    <div class="title">
-                        <a href="/events/view/{{event.event.slug}}/">{{event.event.name}}</a>
+    <div id="fb-root"></div>
+    <script>
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=241160805895511";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script> 
+
+    <div class="primary-content">
+        <h1>Event details</h1>
+        <div class="content">
+            <div class="event-wrapper">
+                <div class="event-photo">
+                    {% if event.picture %}
+                        <a id="photoFancy" href="/media/{{ event.picture }}">
+                            <div class="center-cropped" 
+                                style="background-image: url('{% cropped_thumbnail event "cropping" height=265 %}');">
+                            </div>​
+                        </a>
+                    {% else %}
+                        <div class="center-cropped" 
+                            style="background-image: url('{{STATIC_URL}}images/default-event.jpg');">
+                        </div>
+                    {% endif %}
+                    <footer>
+                        Submitted by <span class="accented">{{ event.owner }}</span>
+                    </footer>                
+                </div>
+                <div class="event-details">
+                    <div class="title-wrapper">
+                        <div class="title">
+                            <a class="accented" href="{% url 'event_view' event.slug %}">{{event.name}}</a>
+                        </div>
+                        {% if event.price %}
+                            <div class="event-price {% if event.price|length < 9 %} short {% endif %}">{{event.price}}</div>
+                        {% endif %}
                     </div>
-                    {% if event.price %}
-                        <div class="event-price {% if event.event.price|length < 9 %} short {% endif %}">{{event.event.price}}</div>
+                    <div class="event-date-wrapper">
+                        {{event.nearest_start_time|contextualize_date}} - {{event.nearest_end_time|just_time}}                    
+                    </div>
+                    <div class="event-description">
+                        <span class="accented">{{ event.venue.name }}</span>
+                        <br>                    
+                        {{ event.venue.city.name_std }},
+                        {{ event.venue.city.region.name_std }}
+                    </div>
+                    <div class="event-actions">
+                        <table>
+                            {% if event.tickets %}
+                            <tr>
+                                <td>
+                                    <a href='{% if_url event.tickets event.tickets "javascript:searchPadPage.showTicketsPopup();" %}' class="action-buy-tickets">
+                                        Buy tickets
+                                    </a>
+                                    <div class="tickets-popup">                                
+                                        <b>{{event.tickets}}</b>
+                                    </div>
+                                </td>
+                                <td></td>
+                            </tr>
+                            {% endif %}
+                            <tr>
+                                <td>
+                                    <a href="javascript:void()" class="action-remind-me accented" data-event-id="{{ event.id }}">Remind Me</a>
+                                </td>
+                                <td class="in-the-loop-td">
+                                    <a href="javascript:void()" class="action-in-the-loop accented">In the Loop</a>
+                                    <div class="in-the-loop-tags-popup">
+                                        {% for tag in event.tags.all %}
+                                        <span class="button tag" data-tag="{{ tag.name }}">
+                                            {{ tag.name }}
+                                        </span>
+                                        {% endfor %}                                
+                                        <div class="add-in-the-loop-wrapper">
+                                            <span class="button add-in-the-loop active">
+                                                Add in the loop
+                                            </span>
+                                        </div>                                
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a href="javascript:void;" class="action-facebook-like accented">                                
+                                        <div 
+                                            href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" 
+                                            class="fb-like" 
+                                            data-href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" 
+                                            data-send="false" 
+                                            data-layout="button_count" 
+                                            data-width="20" 
+                                            data-show-faces="false" 
+                                            data-font="arial">
+                                        </div>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a href="https://twitter.com/intent/tweet?original_referer=http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}&text={{event.name}}&tw_p=tweetbutton&url=http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" class="action-tweet accented">
+                                        Tweet
+                                    </a>                            
+                                </td>
+                            </tr>
+                            
+                            {% if event.website %}
+                                <tr>
+                                    <td colspan="2">
+                                        <a href="{{ event.website }}" class="block-header accented view-site">
+                                            View Site
+                                        </a>
+                                    </td>                            
+                                </tr>
+                            {% endif %}                        
+                        </table>
+                    </div>
+                    {% if event.venue %}
+                        <div class="map">
+                            <img src="http://maps.googleapis.com/maps/api/staticmap?center={{event.venue.location.y}},{{event.venue.location.x}}&zoom=13&size=350x150&maptype=roadmap&sensor=false&markers=color:blue%7C{{event.venue.location.y}},{{event.venue.location.x}}">
+                        </div>
                     {% endif %}
                 </div>
-                <div class="event-date-wrapper">{{event.start_time|date:"N d, Y f a | l"}}</div>
-                {{event.signle_events}}
-                <div class="event-description">
-                    {{ event.event.venue.name }}<br>
-                    {{ event.event.venue.street }}<br>
-                    {{ event.event.venue.city.name_std }}
-                </div>
-                <div class="event-actions">
-                    <table>
-                        {% if event.event.tickets %}
-                        <tr>
-                            <td>
-                                <a href='{% if_url event.event.tickets event.event.tickets "javascript:searchPadPage.showTicketsPopup();" %}' class="action-buy-tickets">
-                                    Buy tickets
-                                </a>
-                                <div class="tickets-popup">                                
-                                    <b>{{event.event.tickets}}</b>
-                                </div>
-                            </td>
-                            <td></td>
-                        </tr>
-                        {% endif %}
-                        <tr>
-                            <td>
-                                <a href="javascript:void()" class="action-remind-me" data-event-id="{{ event.id }}">Remind Me</a>
-                            </td>
-                            <td class="in-the-loop-td">
-                                <a href="javascript:void()" class="action-in-the-loop">In the Loop</a>
-                                <div class="in-the-loop-tags-popup">
-                                    {% for tag in event.event.tags.all %}
-                                    <span class="button tag" data-tag="{{ tag.name }}">
-                                        {{ tag.name }}
-                                    </span>
-                                    {% endfor %}                                
-                                    <div class="add-in-the-loop-wrapper">
-                                        <span class="button add-in-the-loop active">
-                                            Add in the loop
-                                        </span>
-                                    </div>                                
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <a href="javascript:void;" class="action-facebook-like">                                
-                                    <div href="http://{{ request.META.HTTP_HOST }}/events/view/{{event.event.slug}}/" class="fb-like" data-href="http://{{ request.META.HTTP_HOST }}/events/view/{{event.event.slug}}/" data-send="false" data-layout="button_count" data-width="20" data-show-faces="false" data-font="arial"></div>                                
-                                </a>
-                            </td>
-                            <td>
-                                <a href="https://twitter.com/intent/tweet?original_referer=http://{{ request.META.HTTP_HOST }}/events/&text={{event.event.name}}&tw_p=tweetbutton&url=http://{{ request.META.HTTP_HOST }}/events/view/{{event.event.slug}}" class="action-tweet">
-                                    Tweet
-                                </a>                            
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+                <p>{{ event_description|linebreaks }}</p>
+                <h4 class="tags">
+                    {% for tag in event.tags.all %}
+                        <a href="{% url 'event_browse_tags' tag.slug %}">
+                            {{ tag }}</a>{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </h4>  
             </div>
-            <p>{{ event.description|linebreaks }}</p>
-            <h4>
-                Tags: 
-                {% for tag in event.tags.all %}
-                    <a href="{% url 'event_browse_tags' tag.slug %}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}
-                {% endfor %}
-            </h4>  
-        </div>            
+        </div>
+
+        <header class="event-conversation-header">
+            Join a conversation about "{{ event.name }}"
+        </header>
+        <div class="event-conversation content">
+            
+
+            <div class="fb-comments" data-href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug %}" data-width="630" data-num-posts="5"></div>
+        </div>
     </div>
+
+    <div class="secondary-content">
+        <header>
+            Event at {{ event.venue.name }} in {{ event.venue.city.name_std }}
+        </header>
+        <div class="content">
+            <table class="secondary-content-table" celpadding="0" cellspacing="0">
+                <tbody>
+                    <tr>
+                        <th>Date</th>
+                        <th>Time</th>
+                        <th>Event</th>
+                    </tr>                    
+                    {% if event.venue.future_events|length > 0 %}
+                        {% paginate 5 event.venue.future_events using "venue_events" as venue_events %}
+                        {% for venue_event in venue_events %}
+                            <tr>
+                                <td>{{ venue_event.nearest_start_time|date:"M d" }}</td>
+                                <td>{{ venue_event.nearest_start_time|date:"fA"|title }}</td>
+                                <td>
+                                    <a href="{% url 'event_view' venue_event.slug %}">
+                                        {{ venue_event.name }}
+                                    </a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    {% endif %}
+                </tbody>
+            </table>
+            {% if event.venue.future_events|length > 0 and pages|length > 1 %}
+                <div class="secondary-content-table-pagination">
+                    <span class="pagintation-wrapper">
+                        {% get_pages %}
+                        {% if pages.current.is_first %}
+                            <span class="prev"></span>                    
+                        {% else %}                
+                            <a class="prev" href="{{ pages.previous.url }}"></a>
+                        {% endif %}
+                        <span class="page-info">
+                            {{ pages.current }} of {{ pages|length }}
+                        </span>
+
+                        {% if pages.current.is_last %}
+                            <span class="next"></span>                    
+                        {% else %}
+                            <a class="next" href="{{ pages.next.url }}"></a>
+                        {% endif %}
+                    </span>        
+                </div>
+            {% endif %}
+        </div>
+    </div>
+    
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 {% endblock %}
