Sms notifications implemented

--- a/alpha/accounts/templates/accounts/reminder_settings.html
+++ b/alpha/accounts/templates/accounts/reminder_settings.html
@@ -22,6 +22,7 @@
         </h1>
         <div class="content account-options-wrapper">            
             <div class="main-content account-options">
+                {{form.errors}}
                 {%if form.errors %}
                     <div class="errors" style="border:1px solid RED;border-radius:4px;">
                         <ul style="list-style-type: none;">
