Upgrade Account model. Remove day/time for in the loop options. Add radio buttons for reminder options

--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -8,9 +8,9 @@
 
 <div class="menu-wrapper">
     <ul class="main-menu">
+        <li class="addBorderRight"><a href="/">Home</a></li>
         <li class="addBorderRight"><a href="/events/browse/">Browse Events</a></li>
-        <li class="addBorderRight"><a href="{% url 'event_create' %}">Post Events</a></li>
-        <li class="addBorderRight"><a href="/events/browse/?function=top_viewed">Popular</a></li>
+        <li class="addBorderRight"><a href="{% url 'event_create' %}">Post Events</a></li>        
         <div class="clr"></div>
     </ul>
     <div class="location-wrapper">
