--- a/alpha/event/static/styles/accounts/accounts.css
+++ b/alpha/event/static/styles/accounts/accounts.css
@@ -132,11 +132,28 @@
     width: 100%;
 }
 
+.reminder-time-options table tr td{
+    opacity: 0.5;
+}
+
+.reminder-time-options table tr.active td, 
+.reminder-time-options table tr td.first {
+    opacity: 1;
+}
+
 .options table td {
     vertical-align: middle;
 }
 
-.options table td.first {
+.reminder-time-options table td.first {
+    width: 30px;
+}
+
+.reminder-time-options table td.first div {
+    height: 16px;
+}
+
+.options table td.second {
     color: #454545;
     font-weight: bold;
     width: 110px;
@@ -190,9 +207,7 @@
 }
 
 #id_reminder_days_before_event, 
-#id_reminder_hours_before_event,
-#id_in_the_loop_days_before_event,
-#id_in_the_loop_hours_before_event {
+#id_reminder_hours_before_event {
     width: 40px;
     height: 23px;
     padding-left: 25px;
