--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -6,7 +6,7 @@
     <script src="{{STATIC_URL}}js/event/search.js" type="text/javascript"></script>
 {% endblock %}
 
-<div class="menu-wrapper">
+<div class="menu-wrapper" data-no-turbolink>
     <ul class="main-menu">
         <li class="addBorderRight"><a href="/">Home</a></li>
         <li class="addBorderRight"><a href="/events/browse/">Browse Events</a></li>
