--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -12,7 +12,10 @@
     <link href="{{STATIC_URL}}styles/browse/search_tags.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />    
     <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/browse/jump_popup.css" rel="stylesheet" type="text/css" />    
+    <link href="{{STATIC_URL}}styles/browse/jump_popup.css" rel="stylesheet" type="text/css" />  
+
+    <script type="text/javascript" src="{{STATIC_URL}}turbolinks/turbolinks.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/facebook-for-turbolinks.js"></script>
 
     <script src="{{STATIC_URL}}js/tagit.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>
@@ -30,15 +33,6 @@
     {% if page_date != "flow" %}&gt; {{page_date|slug_to_title }}{% endif %}{% endblock %}
 {% block page %}
 <div id="fb-root"></div>
-<script>
-    (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=241160805895511";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-</script>
 
 {% if messages %}
     <div class="msg">
