--- a/alpha/event/templates/events/search_pad.html
+++ b/alpha/event/templates/events/search_pad.html
@@ -12,6 +12,9 @@
     <link href="{{STATIC_URL}}styles/browse/jump_popup.css" rel="stylesheet" type="text/css" />    
 
     <script src="{{STATIC_URL}}js/tagit.js" type="text/javascript"></script>
+
+    <script type="text/javascript" src="{{STATIC_URL}}turbolinks/turbolinks.js"></script>
+    <script type="text/javascript" src="{{STATIC_URL}}js/facebook-for-turbolinks.js"></script>
     
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>        
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
@@ -24,16 +27,7 @@
 {% endblock %}
 
 {% block page %}
-    <div id="fb-root"></div>
-    <script>
-        (function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=241160805895511";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>    
+    <div id="fb-root"></div>    
 
     <div class="wrapper">
         <div class="page-container">
@@ -95,7 +89,4 @@
         </div>
         <!--end.content-wrapper-->             
     </div>
-
-	
-    <script src="{{STATIC_URL}}popup/js/jquery.reveal.js"></script>
 {% endblock %}
