--- a/alpha/venue_profile/templates/prprofile.html
+++ b/alpha/venue_profile/templates/prprofile.html
@@ -13,7 +13,8 @@
     <link href="{{STATIC_URL}}styles/browse/search_pad.css" rel="stylesheet" type="text/css" />    
     <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/browse/jump_popup.css" rel="stylesheet" type="text/css" />    
-
+    
+    <script src="{{ STATIC_URL }}js/prprofile.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/tagit.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
@@ -64,12 +65,21 @@
     </div>
     <div id="venue_events_wrapper">
     </div>
-    <ul>
-    {% for event in venues_profile.events %}
-        <li>{{ event.name }}</li>
-    {% endfor %}
-    </ul>
+    <div id="events_header"><a><h3 class="events">{{ venues_profile.name }} events</h3></a></div>
+    <div id="featured_events_header"><a><h3 class="featured_eventsInactive">Featured events</h3></a></div>
+    <div id="archived_events_header"><a><h3 class="archived_eventsInactive">Archived events</h3></a></div>
+    <div id="stats_header"><a><h3 class="statsInactive">Featured Stats</h3></a></div>
     
+    
+    
+    
+    <div id="events">
+        {% for event in venues_profile.events %}
+        <div class="snglEvent">
+           <img class = "snglEventImg" src="{{ event.picture.url }}" height="58" width="58"/> 
+        </div>
+        {% endfor %}
+    </div>
     
     
     
