Venue Account. Public, private. Make event featured

--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -87,7 +87,7 @@
 
                 {% if profile.venue %}
                     <h2 class="block-header"> 
-                        Venues
+                        Your accounts
                     </h2>
                     {% venue_accounts %}                    
                 {% endif %}
@@ -97,7 +97,7 @@
     </div>
 
     <div class="tabs-container">
-        <ul class="tabs">
+        <ul class="tabs" data-page-id="account">
             <li class="current" data-tab-id="reminder"><span>Reminder</span></li>
             <li  data-tab-id="in-the-loop"><span>In the Loop</span></li>
         </ul>
