--- a/alpha/event/static/styles/widgets.css
+++ b/alpha/event/static/styles/widgets.css
@@ -66,8 +66,11 @@
 
 div.checkbox {
     display:inline-block;
-    margin-right:10px;
-    
+    margin-right:10px;   
+}
+
+div.checkbox label {
+    /*vertical-align: top;*/
 }
 
 input[type=checkbox] {
