--- a/alpha/accounts/templates/userena/venue_accounts.html
+++ b/alpha/accounts/templates/userena/venue_accounts.html
@@ -1,5 +1,7 @@
 {% for venue_account in venue_accounts %}
+<div>
     <a class="mngp" href="{% url 'private_venue_account' slug=venue_account.slug %}">      
         {{ venue_account.venue.name }}
     </a>
+</div>
 {% endfor %}
