--- a/alpha/event/static/styles/accounts/accounts.css
+++ b/alpha/event/static/styles/accounts/accounts.css
@@ -185,9 +185,18 @@
     -moz-box-shadow: none;
     box-shadow: none;
     padding: 0 5px;
-    height:20px;
+    height: 20px;
 }
 
+.options textarea {
+    color: #454545;
+    background: #fff;
+    border: 1px solid #ababab;
+    outline: 0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;    
+}
 
 
 #id_reminder_email, 
@@ -404,19 +413,94 @@
     margin-top: 10px;
 }
 
-.contact-info-table td {
+.edit-contact-info-table td.top {
     vertical-align:top;
     padding-top: 5px;
 }
 
-.contact-info-table td:first-child {
-    padding-top: 0px;
+.contact-info-table td:first-child
+.edit-contact-info-table td:first-child {
+    padding-top: 0;
 }
 
 .contact-info-table td:nth-of-type(2){
     width:75px;
 }
 
+.edit-contact-info-table {
+    padding: 0;
+    margin: 0;
+}
+
 .about-us {
+    margin-top: 20px;
     margin-bottom: 30px;
+}
+
+#venue_account_map {
+    width: 300px;
+    height: 200px;
+}
+
+.edit-contact-info-table ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.edit-contact-info-table ul li {
+    list-style: none;
+    display: inline-block;
+    margin-right: 15px;
+}
+
+.account-entry-wrapper {
+    width: 710px;
+}
+
+.account-entry-wrapper .entry-info {
+    width: 690px;
+    padding-right: 7px;
+}
+.account-entry-wrapper .event-edit-actions {
+    padding: 0 5px;
+    border: 1px solid #e3e3e3;
+    background: #fff;
+    float: right;
+    margin-top: 10px;
+    height: 45px;
+    line-height: 40px;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    vertical-align: middle;
+}
+
+.account-entry-wrapper .event-edit-actions div,
+.account-entry-wrapper .event-edit-actions a {
+    display: inline-block;
+    margin-right: 5px;
+    color: #06c;
+    text-decoration: none;
+    height: 25px;
+    line-height: 25px;
+    vertical-align: middle;
+    padding-left: 27px;
+    cursor: pointer;
+}
+
+.account-entry-wrapper .event-edit-actions div:hover,
+.account-entry-wrapper .event-edit-actions a:hover {
+    text-decoration: underline;
+} 
+
+.account-entry-wrapper .event-edit-actions .edit-action {
+    background: url("/static/images/prof_event_edit_icon.png") left center no-repeat;
+}
+
+.account-entry-wrapper .event-edit-actions .delete-action {
+    background: url("/static/images/prof_event_delete_icon.png") left center no-repeat;
+}
+
+.account-entry-wrapper .event-edit-actions .make-featured-action {
+    background: url("/static/images/prof_event_feature_icon.png") left center no-repeat;
 }
